--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "A script that replaces specified global variables and their properties in javascript code",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexjesp/global-replacer.git"
+  },
   "directories": {
     "test": "test"
   },
